idea/testData/multiModuleHighlighting/multiplatform/transitive/common/common.kt
expect fun <error descr="[NO_ACTUAL_FOR_EXPECT] Expected function 'foo' has no actual declaration in module jvm_base for JVM">foo</error>(): Int